# provii-crypto

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PROTOCOL.md  README.md  SECURITY.md  cliff.toml  deny.toml  fuzz_12h_all.sh  fuzz_12h_individual.sh  fuzz_12h_parallel.sh  rust-toolchain.toml  zk-params-manifest.json
.cargo/: config.toml  mutants.toml
.github/: CODEOWNERS  dependabot.yml  zizmor.yml
.github/workflows/: ci.yml  cla.yml  fuzz.yml  generate-params.yml  mutants.yml  publish-crates.yml  release.yml  sbom.yml  security.yml  slow-checks.yml
.semgrep/: provii-crypto.yaml
crypto-circuit-age/: Cargo.toml  README.md
crypto-circuit-age/examples/: check_key.rs  gen_params.rs  test_proof.rs
crypto-circuit-age/src/: lib.rs
crypto-circuit-age/src/gadgets/: bits.rs  bits_tests.rs  blake2s.rs  mod.rs  pedersen.rs  prehash.rs  redjubjub.rs  sapling_constants.rs  sapling_ecc.rs  sapling_pedersen.rs
crypto-circuit-age/tests/: adversarial_soundness.rs  constraint_regression.rs  layout_guard.rs  pi_parity.rs
crypto-commit/: Cargo.toml  README.md
crypto-commit/src/: lib.rs
crypto-commit/tests/: commitment_boundaries.rs  nullifier_vectors.rs  randomness_validation.rs
crypto-commons/: Cargo.toml  README.md
crypto-commons/src/: attestation.rs  constants.rs  lib.rs
crypto-commons/tests/: attestation_boundaries.rs  bias_roundtrip.rs  message_bytes_validation.rs
crypto-e2e-tests/: Cargo.toml  README.md
crypto-e2e-tests/tests/: age_verification.rs  protocol_validation.rs  public_input_debugging.rs  spec_claims.rs  spec_vectors.rs
crypto-protocol/: Cargo.toml  README.md
crypto-protocol/src/: lib.rs  nonce.rs
crypto-protocol/tests/: replay_tag_vectors.rs
crypto-prover/: Cargo.toml  README.md
crypto-prover/src/: lib.rs
crypto-prover/tests/: e2e_age_full.rs
crypto-public-inputs/: Cargo.toml  README.md
crypto-public-inputs/src/: lib.rs
crypto-public-inputs/tests/: bit_vectors.rs
crypto-sig-redjubjub/: Cargo.toml  README.md
crypto-sig-redjubjub/src/: lib.rs
crypto-sig-redjubjub/tests/: zeroize_invocation.rs
crypto-verifier/: Cargo.toml  README.md
crypto-verifier/src/: lib.rs
crypto-verifier/tests/: vk_registry.rs
docs/: ARCHITECTURE.md
docs/adr/: 0001-record-architecture-decisions.md  0002-use-groth16-proving-system.md  0003-workspace-crate-structure.md  README.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_attestation_create.rs  fuzz_attestation_deser.rs  fuzz_blake2s_hashing.rs  fuzz_commit.rs  fuzz_commons_cred_prehash.rs  fuzz_commons_vec_to_array32.rs  fuzz_hex_encoding.rs  fuzz_nonce_operations.rs  fuzz_proof_verify.rs  fuzz_protocol.rs  fuzz_protocol_code_challenge.rs  fuzz_protocol_issuance_consent.rs  fuzz_protocol_origin_hash.rs  fuzz_protocol_replay_tag.rs  fuzz_protocol_rp_challenge.rs  fuzz_protocol_write_length_prefixed.rs  fuzz_public_inputs.rs  fuzz_public_inputs_assemble.rs  fuzz_public_inputs_bits_le.rs  fuzz_redjubjub_key_parsing.rs  fuzz_serialization_structs.rs  fuzz_sig_verify.rs  fuzz_verifier_load_vk.rs
scripts/: check-zk-param-consistency.sh  propagate-zk-params.sh
tools/: Readme.md
tools/issuer-gen/: .gitignore  Cargo.toml  README.md
tools/issuer-gen/src/: main.rs
tools/keygen/: Cargo.toml
tools/keygen/src/: main.rs
tools/tests/: test_signature.rs
