[workspace]
members = [
  "crypto-commons",
  "crypto-sig-redjubjub",
  "crypto-commit",
  "crypto-circuit-age",
  "crypto-prover",
  "crypto-verifier",
  "crypto-protocol",
  "crypto-e2e-tests",
  "crypto-public-inputs",
  "tools/keygen",
  "tools/issuer-gen",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Provii Team"]
license = "Apache-2.0"
repository = "https://github.com/provii/provii-crypto"

[workspace.dependencies]
provii-crypto-commons = { path = "crypto-commons", version = "0.1.0" }
provii-crypto-sig-redjubjub = { path = "crypto-sig-redjubjub", version = "0.1.0" }
provii-crypto-commit = { path = "crypto-commit", version = "0.1.0" }
provii-crypto-circuit-age = { path = "crypto-circuit-age", version = "0.1.0" }
provii-crypto-public-inputs = { path = "crypto-public-inputs", version = "0.1.0" }
provii-crypto-prover = { path = "crypto-prover", version = "0.1.0" }
provii-crypto-verifier = { path = "crypto-verifier", version = "0.1.0" }
provii-crypto-protocol = { path = "crypto-protocol", version = "0.1.0" }

# Core cryptography dependencies.
bellman = { version = "0.14", default-features = false, features = ["groth16"] }
bls12_381 = "0.8"
jubjub = "0.10"
ed25519-dalek = { version = "2.1", default-features = false, features = [
  "alloc",
  "zeroize",
] }
blake2 = "0.10"
blake2s_simd = "1.0"
sha2 = "0.10"

# Zero-knowledge proof utilities.
ff = "0.13"
group = "0.13"
rand_core = "0.6"
rand = "0.8"
subtle = "2.6"
sapling-crypto = { version = "0.7", default-features = false, features = [
  "circuit",
] }

# Serialization helpers.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
hex = "0.4"

# Async runtime support.
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }

# Error handling libraries.
anyhow = "1.0"
thiserror = "2.0"

# Utility crates.
once_cell = "1.21"
lazy_static = "1.5"
getrandom = { version = "0.2", features = ["js"] }
zeroize = { version = "1.8", features = ["derive"] }
worker = "0.7"
byteorder = "1.5.0"
criterion = "0.7.0"
rayon = "1.11.0"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
# Panic prevention
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
# Arithmetic safety
arithmetic_side_effects = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
# Indexing safety
indexing_slicing = "deny"
string_slice = "deny"
# Code quality
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Style
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
too_many_arguments = "allow"

# Release build optimizations.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true
# Path remapping for reproducibility is done at build time via the stable
# --remap-path-prefix flag, not the trim-paths profile option (which tripped an
# unstable-feature requirement on the pinned toolchain).

# Profile tuned for WASM/Worker builds (minimal size).
[profile.worker]
inherits = "release"
opt-level = "z"
lto = "fat"
panic = "abort"

# Profile tuned for mobile builds (balanced size and speed).
[profile.mobile]
inherits = "release"
opt-level = 2
lto = "thin"
codegen-units = 16
