[package]
name = "provii-crypto-e2e-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "End-to-end integration tests for the provii-crypto workspace"

[lints]
workspace = true

[dev-dependencies]
provii-crypto-commons.workspace = true
provii-crypto-sig-redjubjub.workspace = true
provii-crypto-commit.workspace = true
provii-crypto-circuit-age.workspace = true
provii-crypto-prover.workspace = true
provii-crypto-verifier.workspace = true
provii-crypto-protocol.workspace = true
provii-crypto-public-inputs.workspace = true

bellman.workspace = true
bls12_381.workspace = true
blake2.workspace = true
blake2s_simd.workspace = true
rand.workspace = true
rand_chacha = "0.3"
ed25519-dalek.workspace = true
serde_json.workspace = true
base64.workspace = true
anyhow.workspace = true
hex.workspace = true
ff.workspace = true
jubjub.workspace = true
sha2.workspace = true
group.workspace = true
