[package]
name = "provii-crypto-prover"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Groth16 zero-knowledge proof generation for provii-crypto age verification"

[dependencies]
provii-crypto-public-inputs.workspace = true
provii-crypto-commons.workspace = true
provii-crypto-commit.workspace = true
provii-crypto-circuit-age.workspace = true
bls12_381.workspace = true
rand.workspace = true
blake2.workspace = true
serde.workspace = true
lazy_static.workspace = true
hex.workspace = true
log = "0.4"
ff.workspace = true
rayon.workspace = true

[target.'cfg(any(target_arch = "wasm32", target_os = "android", target_os = "ios"))'.dependencies]
bellman = { version = "0.14", default-features = false, features = ["groth16"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(any(target_os = "android", target_os = "ios"))))'.dependencies]
bellman = { version = "0.14", default-features = false, features = [
  "groth16",
  "multicore",
] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[dev-dependencies]
tokio.workspace = true
criterion.workspace = true
serde_json.workspace = true
proptest = "1.7"
anyhow.workspace = true

provii-crypto-sig-redjubjub.workspace = true
provii-crypto-verifier.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = []
