[package]
name = "provii-crypto-public-inputs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Canonical bit packing of BLS12-381 public inputs for provii-crypto circuits"

[dependencies]
bls12_381.workspace = true
bellman.workspace = true
ff.workspace = true
provii-crypto-commons.workspace = true
thiserror.workspace = true

[lints]
workspace = true

[dev-dependencies]
proptest = "1.7"
