[package]
name = "provii-keygen-tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for generating RedJubjub issuer key pairs"

[[bin]]
name = "generate-issuer-keys"
path = "src/main.rs"

[dependencies]
# Core crypto libraries from provii-crypto workspace
provii-crypto-sig-redjubjub = { workspace = true }
provii-crypto-commons = { workspace = true }

# Elliptic curve dependencies
jubjub.workspace = true
group.workspace = true

# Encoding and serialization
base64.workspace = true
hex.workspace = true
serde_json.workspace = true

# Utilities
chrono = "0.4"
anyhow.workspace = true
zeroize.workspace = true

[lints]
workspace = true
